[package]
name = "repertorre"
version = "0.1.0"
authors = ["Miles Olson <mpolson64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
diesel = { version = "*", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"
